# durian-web

./: .env  .env.example  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  commands.rs  crypto.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src/account/: insert.tsx  page.tsx  query.tsx
src/account/components/: footer.tsx  header.tsx  manager-board.tsx
src/account/config/: api.tsx
src/auth/: verify.ts
src/auth/login/: page.tsx
src/auth/register/: page.tsx
src/components/: AuthForm.tsx
src/config/: url.tsx
src/hooks/: useAuth.tsx
src/libs/: api.ts  tauri.ts
src/login/: page.tsx
src/ping/: ping.tsx
src/register/: page.tsx
src/styles/: constants.ts
src/types/: index.ts  response.tsx
src/utils/: auth.ts  hash.ts
