[package]
name = "durian-web"
version = "0.1.0"
description = "A password management tool."
authors = ["ElvisDing"]
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "durian_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 框架
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 加密
ciftl-rs = "0.1.0"
ring = "0.17"
hex = "0.4"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# 工具库
dirs = "5.0"
once_cell = "1.19"

# 开发依赖
[dev-dependencies]
tempfile = "3"

# Release 优化配置
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

